# xppaut

./: CMakeLists.txt
data/: animsvgwww  xppaut-stylesheet.css
src/: CMakeLists.txt  auto_x11.c  browse.c  comline.c  do_fit.c  load_eqn.c  load_eqn.h  main.c  menudrive.c  nullcline.c  nullcline.h  pop_list.c
